change severity to 6

--- a/verification.ipynb
+++ b/verification.ipynb
@@ -526,9 +526,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dataset_loader import load_cifar10\n",
     "import matplotlib.pyplot as plt\n",
@@ -548,6 +559,10 @@
     "    def motion_blur(self, radius=0.0, sigma=0.0, angle=0.0):\n",
     "        wandlibrary.MagickMotionBlurImage(self.wand, radius, sigma, angle)\n",
     "\n",
+    "def rot270(image):\n",
+    "    rotater = transforms.RandomRotation(degrees=(90, 90))\n",
+    "    return rotater(image)\n",
+    "\n",
     "def rot90(img):\n",
     "    rotater = transforms.RandomRotation(degrees=(270, 270))\n",
     "    return rotater(img)\n",
@@ -564,14 +579,14 @@
     "    return resized\n",
     "\n",
     "\n",
-    "def gaussian_noise(x, severity=1):\n",
+    "def gaussian_noise(x, severity=5):\n",
     "    c = [0.04, 0.06, .08, .09, .10][severity - 1]\n",
     "\n",
     "    x = np.array(x) / 255.\n",
     "    return np.clip(x + np.random.normal(size=x.shape, scale=c), 0, 1) * 255\n",
     "\n",
     "\n",
-    "def glass_blur(x, severity=1):\n",
+    "def glass_blur(x, severity=5):\n",
     "    # sigma, max_delta, iterations\n",
     "    c = [(0.05,1,1), (0.25,1,1), (0.4,1,1), (0.25,1,2), (0.4,1,2)][severity - 1]\n",
     "\n",
@@ -589,7 +604,7 @@
     "    return np.clip(gaussian(x / 255., sigma=c[0], multichannel=True), 0, 1) * 255\n",
     "\n",
     "\n",
-    "def jpeg_compression(x, severity=1):\n",
+    "def jpeg_compression(x, severity=5):\n",
     "    c = [80, 65, 58, 50, 40][severity - 1]\n",
     "\n",
     "    output = BytesIO()\n",
@@ -612,7 +627,7 @@
     "    return img[trim_top:trim_top + h, trim_top:trim_top + h]\n",
     "\n",
     "\n",
-    "def snow(x, severity=1):\n",
+    "def snow(x, severity=5):\n",
     "    c = [(0.1,0.2,1,0.6,8,3,0.95),\n",
     "         (0.1,0.2,1,0.5,10,4,0.9),\n",
     "         (0.15,0.3,1.75,0.55,10,4,0.9),\n",
@@ -640,10 +655,64 @@
     "    return np.clip(x + snow_layer + np.rot90(snow_layer, k=2), 0, 1) * 255\n",
     "\n",
     "\n",
+    "def gaussian_blur(x, severity=5):\n",
+    "    c = [.4, .6, 0.7, .8, 1][severity - 1]\n",
+    "\n",
+    "    x = gaussian(np.array(x) / 255., sigma=c, multichannel=True)\n",
+    "    return np.clip(x, 0, 1) * 255\n",
+    "\n",
+    "def color_jitter(image):\n",
+    "    jitter = transforms.ColorJitter(brightness=0.5, contrast=0.5, saturation=0.5, hue=0.5)\n",
+    "    return jitter(image)\n",
+    "\n",
     "noises_list = ['rot90', 'flip', 'random_crop', 'gaussian_noise', 'glass_blur', 'jpeg_compression', 'snow']\n",
     "transform = transforms.ToTensor()\n",
-    "img = transform((cv2.resize(cv2.imread('./figures/airplain_img/airplain.jpg'), (512, 512))))\n",
-    "cv2.imwrite('./figures/car_img/car.jpg', (cv2.resize(cv2.imread('./figures/car_img/car.jpg'), (512, 512))))\n"
+    "img = transform((cv2.resize(cv2.imread('./figures/tmp/f4.jpg'), (512, 512))))\n",
+    "cv2.imwrite('./figures/v_512/v2.jpg', (cv2.resize(cv2.imread('./figures/tmp/f4.jpg'), (512, 512))))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_217030/1335068541.py:107: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  snow_layer = cv2.imdecode(np.fromstring(snow_layer.make_blob(), np.uint8),\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite('./figures/v_512/v2_color_jitter.jpg', color_jitter(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
+    "cv2.imwrite('./figures/v_512/v2_rot270.jpg', rot270(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
+    "cv2.imwrite('./figures/v_512/v2_rot90.jpg', rot90(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
+    "cv2.imwrite('./figures/v_512/v2_flip.jpg', flip(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
+    "cv2.imwrite('./figures/v_512/v2_random_crop.jpg', random_crop(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
+    "cv2.imwrite('./figures/v_512/v2_gaussian_noise.jpg', np.uint8(gaussian_noise(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
+    "cv2.imwrite('./figures/v_512/v2_glass_blur.jpg', np.uint8(glass_blur(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
+    "cv2.imwrite('./figures/v_512/v2_jpeg_compression.jpg', np.uint8(jpeg_compression(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
+    "cv2.imwrite('./figures/v_512/v2_snow.jpg', np.uint8(snow(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
+    "cv2.imwrite('./figures/v_512/v2_gaussian_blur.jpg', np.uint8(gaussian_blur(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TSNE"
    ]
   },
   {
@@ -652,13 +721,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv2.imwrite('./figures/airplain_img/rot90.jpg', rot90(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
-    "cv2.imwrite('./figures/airplain/flip.jpg', flip(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
-    "cv2.imwrite('./figures/airplain/random_crop.jpg', random_crop(img).permute(1,2,0).detach().cpu().numpy() * 255.)\n",
-    "cv2.imwrite('./figures/airplain/gaussian_noise.jpg', np.uint8(gaussian_noise(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
-    "cv2.imwrite('./figures/airplain/glass_blur.jpg', np.uint8(glass_blur(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
-    "cv2.imwrite('./figures/airplain/jpeg_compression.jpg', np.uint8(jpeg_compression(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))\n",
-    "cv2.imwrite('./figures/airplain/snow.jpg', np.uint8(snow(PIL.Image.fromarray((img.permute(1,2,0).detach().cpu().numpy() * 255.).astype(np.uint8)))))"
+    "from sklearn.manifold import TSNE\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import plotly.express as px \n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = [1 for i in range(16)]\n",
+    "y.extend([1 for i in range(16)])\n",
+    "y.extend([0 for i in range(16)])\n",
+    "y.extend([1 for i in range(16)])\n",
+    "y.extend([0 for i in range(16)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tsne = TSNE(n_components=2, verbose=1, random_state=123, learning_rate='auto', init='pca')\n",
+    "z = tsne.fit_transform(x) \n",
+    "df = pd.DataFrame()\n",
+    "df[\"y\"] = y\n",
+    "df[\"component_1\"] = z[:,0]\n",
+    "df[\"component_2\"] = z[:,1]\n",
+    "label_str = [str(yy) for yy in y]\n",
+    "# for l in df.y.tolist():\n",
+    "#     if l == 1:\n",
+    "#         label_str.append(class1)\n",
+    "#     else:\n",
+    "#         label_str.append(class2)\n",
+    "\n",
+    "fig = px.scatter(data_frame=df, x=\"component_1\", y=\"component_2\", color=label_str,\n",
+    "           labels={\n",
+    "                     \"component_1\": \"Component 1\",\n",
+    "                     \"component_2\": \"Component 2\",\n",
+    "                 },\n",
+    "            title=\"CLIP encoding normal vs rot90\",\n",
+    "            width=1024, height=1024)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    font=dict(\n",
+    "        size=22,  # Set the font size here\n",
+    "    )\n",
+    ")\n",
+    "fig.show()\n",
+    "# fig.write_image(original_path+prefix_path+config_path+\"{}_vs_{}_tsne.png\".format(class1, class2))"
    ]
   }
  ],
